# cppdemo

./: CMakeLists.txt  README.md  cmakelists.txt  help.h
.github/workflows/: cmake-win.yml  cmake.yml
class/: creature.h  demo_class.cpp
define/: demo_define.cpp
exception/: demo_exception.cpp
extend/: demo_extend.cpp
friend/: demo_friend.cpp
fs/: demo_fs.cpp
io/: demo_io.cpp
namespace/: demo_namespace.cpp  hb.h  wh.h  xf.h  xf2.h
newdelete/: demo_newdelete.cpp
operator/: demo_operator.cpp
signal/: demo_signal.cpp
simple/: demo_simple.cpp
stl/: demo_stl.cpp
template/: demo_template.cpp
thread/: demo_thread.cpp
time/: demo_time.cpp
